Parse and store MITRE data in sqlite

--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -79,6 +79,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 146,
+   "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_external_ids(elems):\n",
+    "    return [r.external_id for e in elems for r in e.external_references if r.source_name == 'mitre-attack']\n",
+    "        \n",
+    "def get_names(elems):\n",
+    "    return [e.name for e in elems]\n",
+    "\n",
+    "# Load mitre attack data\n",
+    "mitre_attack_data = MitreAttackData(\"enterprise-attack.json\")\n",
+    "\n",
+    "tactics = mitre_attack_data.get_tactics()\n",
+    "techniques = mitre_attack_data.get_techniques()\n",
+    "groups = mitre_attack_data.get_groups()\n",
+    "software = mitre_attack_data.get_software()\n",
+    "campaigns = mitre_attack_data.get_campaigns()\n",
+    "datasources = mitre_attack_data.get_datasources()\n",
+    "\n",
+    "tactics_ids = set(get_external_ids(tactics))\n",
+    "techniques_ids = set(get_external_ids(techniques))\n",
+    "groups_names = set(get_names(groups))\n",
+    "groups_ids = set(get_external_ids(groups))\n",
+    "software_names = set(get_names(software))\n",
+    "software_ids = set(get_external_ids(software))\n",
+    "campaign_names = set(get_names(campaigns))\n",
+    "campaign_ids = set(get_external_ids(campaigns))\n",
+    "datasources_ids = set(get_external_ids(datasources))\n",
+    "\n",
+    "mitre_data = {\n",
+    "    \"tactics\": tactics_ids,\n",
+    "    \"techniques\": techniques_ids,\n",
+    "    \"group_names\": groups_names,\n",
+    "    \"group_ids\": groups_ids,\n",
+    "    \"software_ids\": software_ids,\n",
+    "    \"campaign_names\": campaign_names,\n",
+    "    \"campaign_ids\": campaign_ids,\n",
+    "    \"datasources\": datasources_ids,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
@@ -92,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 158,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -109,7 +154,7 @@
     "    domains = set()\n",
     "    yara_rules = set()\n",
     "    cves = set()\n",
-    "    mitre = defaultdict(set)\n",
+    "    mitre = dict()\n",
     "        \n",
     "    def __init__(self, contents, title, body, report_type, source, publish_time, url=None):\n",
     "        self.contents = contents # original contents\n",
@@ -146,54 +191,16 @@
     "        self.sha256s = set(ie.extract_sha256_hashes(self.body))\n",
     "\n",
     "    def parse_mitre(self):\n",
-    "        def get_external_ids(elems):\n",
-    "            return [r.external_id for e in elems for r in e.external_references if r.source_name == 'mitre-attack']\n",
-    "        \n",
-    "        def get_names(elems):\n",
-    "            return [e.name for e in elems]\n",
-    "\n",
-    "        # Load mitre attack data\n",
-    "        mitre_attack_data = MitreAttackData(\"enterprise-attack.json\")\n",
-    "\n",
-    "        tactics = mitre_attack_data.get_tactics()\n",
-    "        techniques = mitre_attack_data.get_techniques()\n",
-    "        groups = mitre_attack_data.get_groups()\n",
-    "        software = mitre_attack_data.get_software()\n",
-    "        campaigns = mitre_attack_data.get_campaigns()\n",
-    "        datasources = mitre_attack_data.get_datasources()\n",
-    "\n",
-    "        tactics_ids = set(get_external_ids(tactics))\n",
-    "        techniques_ids = set(get_external_ids(techniques))\n",
-    "        groups_names = set(get_names(groups))\n",
-    "        groups_ids = set(get_external_ids(groups))\n",
-    "        software_names = set(get_names(software))\n",
-    "        software_ids = set(get_external_ids(software))\n",
-    "        campaign_names = set(get_names(campaigns))\n",
-    "        campaign_ids = set(get_external_ids(campaigns))\n",
-    "        datasources_ids = set(get_external_ids(datasources))\n",
-    "\n",
-    "        mitre_data = {\n",
-    "            \"tactics\": tactics_ids,\n",
-    "            \"techniques\": techniques_ids,\n",
-    "            \"mitigations\": mitigations_ids,\n",
-    "            \"group_names\": groups_names,\n",
-    "            \"group_ids\": groups_ids,\n",
-    "            \"software_ids\": software_ids,\n",
-    "            \"campaign_names\": campaign_names,\n",
-    "            \"campaign_ids\": campaign_ids,\n",
-    "            \"datasources\": datasources_ids,\n",
-    "        }\n",
-    "\n",
     "        # Tokenize contents\n",
     "        words = set(nltk.corpus.words.words())\n",
     "        tokens = set(nltk.tokenize.word_tokenize(self.body)).difference(words)\n",
     "        for key, values in mitre_data.items():\n",
-    "            self.mitre[key] = tokens.intersection(values)"
+    "            self.mitre[key] = list(tokens.intersection(values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 161,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 160,
    "id": "9f9d3c30-045a-4f2e-9286-d4d3515dddb0",
    "metadata": {},
    "outputs": [
@@ -301,16 +308,16 @@
      "output_type": "stream",
      "text": [
       "Reading posts from WeLiveSecurity\n",
-      "https://www.welivesecurity.com/en/videos/fake-job-offers-target-coders-infostealers/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/scams/no-youre-not-fired-beware-job-termination-scams/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/we-live-science/katharine-hayhoe-most-important-climate-equation-starmus-highlights/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/eset-research/deceptivedevelopment-targets-freelance-developers/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/kids-online/gaming-gambling-lifting-lid-in-game-loot-boxes/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/videos/what-is-penetration-testing-unlocked-403-cybersecurity-podcast-ep-10/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/we-live-science/neil-lawrence-what-makes-us-unique-age-ai-starmus-highlights/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/cybersecurity/ai-driven-identify-fraud-havoc/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/cybersecurity/patch-perish-organizations-vulnerability-management/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
-      "https://www.welivesecurity.com/en/cybersecurity/scammers-exploiting-deepseek-hype/ already present, skipping: UNIQUE constraint failed: report.web_url\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
       "Persisted posts from WeLiveSecurity\n"
      ]
     }
@@ -329,6 +336,7 @@
     "            r.summary = entry.summary\n",
     "\n",
     "        r.parse_iocs()\n",
+    "        r.parse_mitre()\n",
     "        \n",
     "        try:\n",
     "            persist_report(r, conn)\n",
