Add script to migrate sqlite data to AWS postgres

--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e69a932-fe06-468f-be55-3b9a2b0b268f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5cdbd990-8591-4acd-b7aa-848e86d6d2cd",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -189,6 +189,7 @@
     "        self.sha1s = set(ie.extract_sha1_hashes(self.body))\n",
     "        self.md5s = set(ie.extract_md5_hashes(self.body))\n",
     "        self.sha256s = set(ie.extract_sha256_hashes(self.body))\n",
+    "        self.yara_rules = set(ie.extract_yara_rules(self.body))\n",
     "\n",
     "    def parse_mitre(self):\n",
     "        # Tokenize contents\n",
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -216,10 +217,10 @@
     "    \n",
     "    data = {\n",
     "        \"id\": report_id,\n",
-    "        \"publish_time\": datetime.datetime.fromtimestamp(r.publish_time).strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+    "        \"publish_time\": r.publish_time,\n",
     "        \"title\": r.title,\n",
     "        \"summary\": r.summary,\n",
-    "        \"upload_time\": datetime.datetime.fromtimestamp(r.upload_time).strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+    "        \"upload_time\": r.upload_time,\n",
     "        \"source\": r.source,\n",
     "        \"ipv4s\": \",\".join(r.ipv4s),\n",
     "        \"ipv6s\": \",\".join(r.ipv6s),\n",
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -282,8 +283,10 @@
     "                print(f\"{entry.link} already processed. UUID: {row[0]}\")\n",
     "                if skip_existing:\n",
     "                    continue\n",
-    "        \n",
-    "        publish_time = time.mktime(entry.published_parsed)\n",
+    "\n",
+    "        publish_time = 0\n",
+    "        if entry.published_parsed:\n",
+    "            publish_time = time.mktime(entry.published_parsed)\n",
     "        try:\n",
     "            r = Report.from_url(url=entry.link, source=source, publish_time=publish_time)\n",
     "        except Exception as e:\n",
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -316,7 +319,7 @@
     "    conn = sqlite3.connect(\"reports.db\")\n",
     "    \n",
     "    # Initialize database\n",
-    "    with open(\"schema.sql\") as f:\n",
+    "    with open(\"sqlite_schema.sql\") as f:\n",
     "        try:\n",
     "            with conn:\n",
     "                conn.executescript(f.read())\n",
@@ -342,13 +345,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6c9f81b9-1a0c-47dc-b4bb-282552f51a0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********** Reading 100 posts from WeLiveSecurity **********\n",
+      "********** Persisted 100 posts from WeLiveSecurity **********\n",
+      "Processed feed https://www.welivesecurity.com/en/rss/feed/\n",
+      "********** Reading 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "********** Persisted 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "Processed feed https://abuse.ch/rss\n",
+      "********** Reading 15 posts from Check Point Research **********\n",
+      "********** Persisted 15 posts from Check Point Research **********\n",
+      "Processed feed https://research.checkpoint.com/feed/\n",
+      "********** Reading 10 posts from Sophos News **********\n",
+      "********** Persisted 10 posts from Sophos News **********\n",
+      "Processed feed https://news.sophos.com/en-us/feed/\n",
+      "********** Reading 10 posts from SentinelOne **********\n",
+      "********** Persisted 10 posts from SentinelOne **********\n",
+      "Processed feed https://www.sentinelone.com/feed/\n",
+      "********** Reading 15 posts from Unit 42 **********\n",
+      "********** Persisted 15 posts from Unit 42 **********\n",
+      "Processed feed https://unit42.paloaltonetworks.com/feed/\n",
+      "********** Reading 10 posts from Blog **********\n",
+      "********** Persisted 10 posts from Blog **********\n",
+      "Processed feed https://www.crowdstrike.com/en-us/blog/feed\n",
+      "********** Reading 10 posts from CISA Blog **********\n",
+      "Error reading https://www.cisa.gov/news-events/news/unlocking-vulnrichment-enriching-cve-data, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
+      "********** Persisted 10 posts from CISA Blog **********\n",
+      "Processed feed https://www.cisa.gov/blog.xml\n",
+      "********** Reading 10 posts from CISA News **********\n",
+      "Error reading https://www.cisa.gov/news-events/news/cisa-publishes-draft-national-cyber-incident-response-plan-public-comment, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
+      "********** Persisted 10 posts from CISA News **********\n",
+      "Processed feed https://www.cisa.gov/news.xml\n",
+      "********** Reading 30 posts from All CISA Advisories **********\n",
+      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-06, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
+      "Error reading https://www.cisa.gov/news-events/ics-medical-advisories/icsma-25-051-01, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
+      "Error reading https://www.cisa.gov/news-events/alerts/2025/02/20/cisa-adds-two-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
+      "********** Persisted 30 posts from All CISA Advisories **********\n",
+      "Processed feed https://www.cisa.gov/cybersecurity-advisories/all.xml\n",
+      "********** Reading 15 posts from Cisco Talos Blog **********\n",
+      "********** Persisted 15 posts from Cisco Talos Blog **********\n",
+      "Processed feed https://blog.talosintelligence.com/rss/\n",
+      "********** Reading 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "********** Persisted 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "Processed feed https://isc.sans.edu/rssfeed_full.xml\n",
+      "********** Reading 10 posts from Microsoft Security Blog **********\n",
+      "********** Persisted 10 posts from Microsoft Security Blog **********\n",
+      "Processed feed https://www.microsoft.com/en-us/security/blog/feed/\n",
+      "********** Reading 20 posts from Threat Intelligence **********\n",
+      "Error reading https://cloud.google.com/blog/topics/threat-intelligence/scatterbrain-unmasking-poisonplug-obfuscator/, skipping: HTTPSConnectionPool(host='cloud.google.com', port=443): Read timed out.\n",
+      "********** Persisted 20 posts from Threat Intelligence **********\n",
+      "Processed feed https://feeds.feedburner.com/threatintelligence/pvexyqv7v0v\n",
+      "********** Reading 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "Error reading https://www.securitymagazine.com/articles/101443-it-trends-60-of-it-professionals-are-experiencing-burnout, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
+      "Error reading https://www.securitymagazine.com/articles/101436-hidden-costs-of-compromised-privacy-protecting-brands-and-customers, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
+      "Error reading https://www.securitymagazine.com/articles/101433-kash-patel-has-been-sworn-in-as-director-of-the-fbi, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
+      "********** Persisted 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "Processed feed https://www.securitymagazine.com/rss/15\n"
+     ]
+    }
+   ],
    "source": [
-    "main()"
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5740808-b762-4a61-a590-63de092948f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
