--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7e69a932-fe06-468f-be55-3b9a2b0b268f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5cdbd990-8591-4acd-b7aa-848e86d6d2cd",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -182,8 +182,8 @@
     "        return Report(resp.text, title, body.text, ReportType.HTML, source, publish_time, url=url)\n",
     "\n",
     "    def parse_iocs(self):\n",
-    "        self.domains = set(ie.extract_urls(self.body))\n",
-    "        self.ipv4s = set(ie.extract_ipv4s(self.body))\n",
+    "        self.domains = set(ie.extract_urls(self.body, refang=True, no_scheme=True))\n",
+    "        self.ipv4s = set(ie.extract_ipv4s(self.body, refang=True))\n",
     "        self.ipv6s = set(ie.extract_ipv6s(self.body))\n",
     "        self.cves = self.cve_re.findall(self.body)\n",
     "        self.sha1s = set(ie.extract_sha1_hashes(self.body))\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
     "                print(f\"BOZO {line}: {feed.bozo_exception}\")\n",
     "                continue\n",
     "            \n",
-    "            process_feed(feed, conn)\n",
+    "            process_feed(feed, conn, skip_existing=False)\n",
     "            print(f\"Processed feed {line}\")\n",
     "    \n",
     "    conn.close()"
@@ -345,71 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6c9f81b9-1a0c-47dc-b4bb-282552f51a0a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "********** Reading 100 posts from WeLiveSecurity **********\n",
-      "********** Persisted 100 posts from WeLiveSecurity **********\n",
-      "Processed feed https://www.welivesecurity.com/en/rss/feed/\n",
-      "********** Reading 16 posts from abuse.ch | IT-Security Blog **********\n",
-      "********** Persisted 16 posts from abuse.ch | IT-Security Blog **********\n",
-      "Processed feed https://abuse.ch/rss\n",
-      "********** Reading 15 posts from Check Point Research **********\n",
-      "********** Persisted 15 posts from Check Point Research **********\n",
-      "Processed feed https://research.checkpoint.com/feed/\n",
-      "********** Reading 10 posts from Sophos News **********\n",
-      "********** Persisted 10 posts from Sophos News **********\n",
-      "Processed feed https://news.sophos.com/en-us/feed/\n",
-      "********** Reading 10 posts from SentinelOne **********\n",
-      "********** Persisted 10 posts from SentinelOne **********\n",
-      "Processed feed https://www.sentinelone.com/feed/\n",
-      "********** Reading 15 posts from Unit 42 **********\n",
-      "********** Persisted 15 posts from Unit 42 **********\n",
-      "Processed feed https://unit42.paloaltonetworks.com/feed/\n",
-      "********** Reading 10 posts from Blog **********\n",
-      "********** Persisted 10 posts from Blog **********\n",
-      "Processed feed https://www.crowdstrike.com/en-us/blog/feed\n",
-      "********** Reading 10 posts from CISA Blog **********\n",
-      "Error reading https://www.cisa.gov/news-events/news/unlocking-vulnrichment-enriching-cve-data, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
-      "********** Persisted 10 posts from CISA Blog **********\n",
-      "Processed feed https://www.cisa.gov/blog.xml\n",
-      "********** Reading 10 posts from CISA News **********\n",
-      "Error reading https://www.cisa.gov/news-events/news/cisa-publishes-draft-national-cyber-incident-response-plan-public-comment, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
-      "********** Persisted 10 posts from CISA News **********\n",
-      "Processed feed https://www.cisa.gov/news.xml\n",
-      "********** Reading 30 posts from All CISA Advisories **********\n",
-      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-06, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
-      "Error reading https://www.cisa.gov/news-events/ics-medical-advisories/icsma-25-051-01, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
-      "Error reading https://www.cisa.gov/news-events/alerts/2025/02/20/cisa-adds-two-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=5)\n",
-      "********** Persisted 30 posts from All CISA Advisories **********\n",
-      "Processed feed https://www.cisa.gov/cybersecurity-advisories/all.xml\n",
-      "********** Reading 15 posts from Cisco Talos Blog **********\n",
-      "********** Persisted 15 posts from Cisco Talos Blog **********\n",
-      "Processed feed https://blog.talosintelligence.com/rss/\n",
-      "********** Reading 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
-      "********** Persisted 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
-      "Processed feed https://isc.sans.edu/rssfeed_full.xml\n",
-      "********** Reading 10 posts from Microsoft Security Blog **********\n",
-      "********** Persisted 10 posts from Microsoft Security Blog **********\n",
-      "Processed feed https://www.microsoft.com/en-us/security/blog/feed/\n",
-      "********** Reading 20 posts from Threat Intelligence **********\n",
-      "Error reading https://cloud.google.com/blog/topics/threat-intelligence/scatterbrain-unmasking-poisonplug-obfuscator/, skipping: HTTPSConnectionPool(host='cloud.google.com', port=443): Read timed out.\n",
-      "********** Persisted 20 posts from Threat Intelligence **********\n",
-      "Processed feed https://feeds.feedburner.com/threatintelligence/pvexyqv7v0v\n",
-      "********** Reading 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
-      "Error reading https://www.securitymagazine.com/articles/101443-it-trends-60-of-it-professionals-are-experiencing-burnout, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
-      "Error reading https://www.securitymagazine.com/articles/101436-hidden-costs-of-compromised-privacy-protecting-brands-and-customers, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
-      "Error reading https://www.securitymagazine.com/articles/101433-kash-patel-has-been-sworn-in-as-director-of-the-fbi, skipping: HTTPSConnectionPool(host='www.securitymagazine.com', port=443): Read timed out. (read timeout=5)\n",
-      "********** Persisted 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
-      "Processed feed https://www.securitymagazine.com/rss/15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    main()"
