Refang IOCs and persist html body text

--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -146,14 +146,14 @@
     "    cve_re = re.compile(r\"\\bCVE-\\d{4}-\\d{4,}\\b\", re.IGNORECASE)\n",
     "\n",
     "    summary = None\n",
-    "    ipv4s = set()\n",
-    "    ipv6s = set()\n",
-    "    sha256s = set()\n",
-    "    md5s = set()\n",
-    "    sha1s = set()\n",
-    "    domains = set()\n",
-    "    yara_rules = set()\n",
-    "    cves = set()\n",
+    "    ipv4s = []\n",
+    "    ipv6s = []\n",
+    "    sha256s = []\n",
+    "    md5s = []\n",
+    "    sha1s = []\n",
+    "    domains = []\n",
+    "    yara_rules = []\n",
+    "    cves = []\n",
     "    mitre = dict()\n",
     "        \n",
     "    def __init__(self, contents, title, body, report_type, source, publish_time, url=None):\n",
@@ -182,14 +182,26 @@
     "        return Report(resp.text, title, body.text, ReportType.HTML, source, publish_time, url=url)\n",
     "\n",
     "    def parse_iocs(self):\n",
-    "        self.domains = set(ie.extract_urls(self.body, refang=True, no_scheme=True))\n",
-    "        self.ipv4s = set(ie.extract_ipv4s(self.body, refang=True))\n",
-    "        self.ipv6s = set(ie.extract_ipv6s(self.body))\n",
-    "        self.cves = self.cve_re.findall(self.body)\n",
-    "        self.sha1s = set(ie.extract_sha1_hashes(self.body))\n",
-    "        self.md5s = set(ie.extract_md5_hashes(self.body))\n",
-    "        self.sha256s = set(ie.extract_sha256_hashes(self.body))\n",
-    "        self.yara_rules = set(ie.extract_yara_rules(self.body))\n",
+    "        self.domains = list(set(ie.extract_urls(self.body, no_scheme=True)))\n",
+    "        self.ipv4s = list(set(ie.extract_ipv4s(self.body)))\n",
+    "        self.ipv6s = list(set(ie.extract_ipv6s(self.body)))\n",
+    "        self.cves = list(self.cve_re.findall(self.body))\n",
+    "        self.sha1s = list(set(ie.extract_sha1_hashes(self.body)))\n",
+    "        self.md5s = list(set(ie.extract_md5_hashes(self.body)))\n",
+    "        self.sha256s = list(set(ie.extract_sha256_hashes(self.body)))\n",
+    "        self.yara_rules = list(set(ie.extract_yara_rules(self.body)))\n",
+    "\n",
+    "        ref_ipv4s = [ie.refang_ipv4(ipv4) for ipv4 in self.ipv4s]\n",
+    "        ref_domains = [ie.refang_data(domain, no_scheme=True) for domain in self.domains]\n",
+    "\n",
+    "        for i in range(len(self.ipv4s)):\n",
+    "            self.body = self.body.replace(self.ipv4s[i], ref_ipv4s[i])\n",
+    "\n",
+    "        for i in range(len(self.domains)):\n",
+    "            self.body = self.body.replace(self.domains[i], ref_domains[i])\n",
+    "\n",
+    "        self.ipv4s = ref_ipv4s\n",
+    "        self.domains = ref_domains\n",
     "\n",
     "    def parse_mitre(self):\n",
     "        # Tokenize contents\n",
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -210,10 +222,17 @@
     "    r = report\n",
     "\n",
     "    report_data_url = f\"pagedata/{r.source}/{report_id}.html\"\n",
+    "    report_body_path = f\"pagedata/{r.source}/{report_id}.body.txt\"\n",
+    "    \n",
     "    if not os.path.exists(report_data_url):\n",
     "        os.makedirs(os.path.dirname(report_data_url), exist_ok=True)\n",
     "        with open(report_data_url, \"w\") as f:\n",
     "            f.write(r.contents)\n",
+    "\n",
+    "    if not os.path.exists(report_body_path):\n",
+    "        os.makedirs(os.path.dirname(report_body_path), exist_ok=True)\n",
+    "        with open(report_body_path, \"w\") as f:\n",
+    "            f.write(r.body)\n",
     "    \n",
     "    data = {\n",
     "        \"id\": report_id,\n",
@@ -267,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -309,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -353,14 +372,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5740808-b762-4a61-a590-63de092948f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
