--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,10 @@
     "import requests\n",
     "import sqlite3\n",
     "import time\n",
-    "import uuid"
+    "import uuid\n",
+    "from whoosh import index\n",
+    "from whoosh import fields\n",
+    "from whoosh import qparser"
    ]
   },
   {
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -222,18 +225,12 @@
     "    r = report\n",
     "\n",
     "    report_data_url = f\"pagedata/{r.source}/{report_id}.html\"\n",
-    "    report_body_path = f\"pagedata/{r.source}/{report_id}.body.txt\"\n",
     "    \n",
     "    if not os.path.exists(report_data_url):\n",
     "        os.makedirs(os.path.dirname(report_data_url), exist_ok=True)\n",
     "        with open(report_data_url, \"w\") as f:\n",
     "            f.write(r.contents)\n",
     "\n",
-    "    if not os.path.exists(report_body_path):\n",
-    "        os.makedirs(os.path.dirname(report_body_path), exist_ok=True)\n",
-    "        with open(report_body_path, \"w\") as f:\n",
-    "            f.write(r.body)\n",
-    "    \n",
     "    data = {\n",
     "        \"id\": report_id,\n",
     "        \"publish_time\": r.publish_time,\n",
@@ -286,22 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
+   "id": "41a3b524-b3a6-4b2d-9bc6-dae222946aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def index_report(report, report_id, ixwriter):\n",
+    "    ixwriter.update_document(id=report_id, title=report.title, content=report.body)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_feed(feed, conn, skip_existing=True):\n",
+    "def process_feed(feed, conn, ixwriter, skip_existing=True):\n",
     "    source = feed.feed.title\n",
     "    print(f\"********** Reading {len(feed.entries)} posts from {source} **********\")\n",
     "\n",
     "    for entry in feed.entries:\n",
     "        with conn:\n",
     "            row = conn.execute(\"SELECT * FROM report WHERE web_url = ?\", (entry.link,)).fetchone()\n",
-    "            if row:\n",
-    "                print(f\"{entry.link} already processed. UUID: {row[0]}\")\n",
-    "                if skip_existing:\n",
-    "                    continue\n",
+    "            if row and skip_existing:\n",
+    "                continue\n",
     "\n",
     "        publish_time = 0\n",
     "        if entry.published_parsed:\n",
@@ -322,13 +328,14 @@
     "\n",
     "        report_id = row[0] if row else str(uuid.uuid4())\n",
     "        persist_report(r, report_id, conn)\n",
+    "        index_report(r, report_id, ixwriter)\n",
     "        \n",
     "    print(f\"********** Persisted {len(feed.entries)} posts from {source} **********\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -345,21 +352,35 @@
     "        except Exception as e:\n",
     "            print(f\"error applying schema: {e}\")\n",
     "\n",
-    "    with open(\"feeds.txt\") as f:\n",
-    "        lines = f.readlines()\n",
-    "        for line in lines:\n",
-    "            line = line.strip()\n",
-    "            if line.startswith(\"#\"):\n",
-    "                continue\n",
-    "            feed = feedparser.parse(line)\n",
-    "            if feed.bozo:\n",
-    "                print(f\"BOZO {line}: {feed.bozo_exception}\")\n",
-    "                continue\n",
-    "            \n",
-    "            process_feed(feed, conn, skip_existing=False)\n",
-    "            print(f\"Processed feed {line}\")\n",
-    "    \n",
-    "    conn.close()"
+    "    # Create or reset index\n",
+    "    index_dir = \"pageindex\"\n",
+    "    os.makedirs(index_dir, exist_ok=True)\n",
+    "\n",
+    "    ixschema = fields.Schema(id=fields.ID(stored=True, unique=True), title=fields.TEXT, content=fields.TEXT)\n",
+    "    try:\n",
+    "        ix = index.open_dir(index_dir, schema=ixschema, indexname=\"report\")\n",
+    "    except index.EmptyIndexError:\n",
+    "        ix = index.create_in(index_dir, schema=ixschema, indexname=\"report\")\n",
+    "        \n",
+    "    ixwriter = ix.writer()\n",
+    "\n",
+    "    try:\n",
+    "        with open(\"feeds.txt\") as f:\n",
+    "            lines = f.readlines()\n",
+    "            for line in lines:\n",
+    "                line = line.strip()\n",
+    "                if line.startswith(\"#\"):\n",
+    "                    continue\n",
+    "                feed = feedparser.parse(line)\n",
+    "                if feed.bozo:\n",
+    "                    print(f\"BOZO {line}: {feed.bozo_exception}\")\n",
+    "                    continue\n",
+    "                \n",
+    "                process_feed(feed, conn, ixwriter, skip_existing=False)\n",
+    "                print(f\"Processed feed {line}\")\n",
+    "    finally:\n",
+    "        ixwriter.commit()\n",
+    "        conn.close()"
    ]
   },
   {
