--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "7e69a932-fe06-468f-be55-3b9a2b0b268f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "5cdbd990-8591-4acd-b7aa-848e86d6d2cd",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
     "        headers = {\n",
     "            \"User-Agent\": UserAgent().random,\n",
     "        }\n",
-    "        resp = requests.get(url, headers=headers, timeout=5)\n",
+    "        resp = requests.get(url, headers=headers, timeout=10)\n",
     "        resp.raise_for_status()\n",
     "\n",
     "        soup = BeautifulSoup(resp.text, 'html.parser')\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "41a3b524-b3a6-4b2d-9bc6-dae222946aef",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
     "    index_dir = \"pageindex\"\n",
     "    os.makedirs(index_dir, exist_ok=True)\n",
     "\n",
-    "    ixschema = fields.Schema(id=fields.ID(stored=True, unique=True), title=fields.TEXT, content=fields.TEXT)\n",
+    "    ixschema = fields.Schema(id=fields.ID(stored=True, unique=True), title=fields.TEXT, content=fields.TEXT(stored=True))\n",
     "    try:\n",
     "        ix = index.open_dir(index_dir, schema=ixschema, indexname=\"report\")\n",
     "    except index.EmptyIndexError:\n",
@@ -385,10 +385,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6c9f81b9-1a0c-47dc-b4bb-282552f51a0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********** Reading 100 posts from WeLiveSecurity **********\n",
+      "********** Persisted 100 posts from WeLiveSecurity **********\n",
+      "Processed feed https://www.welivesecurity.com/en/rss/feed/\n",
+      "********** Reading 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "********** Persisted 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "Processed feed https://abuse.ch/rss\n",
+      "********** Reading 15 posts from Check Point Research **********\n",
+      "********** Persisted 15 posts from Check Point Research **********\n",
+      "Processed feed https://research.checkpoint.com/feed/\n",
+      "********** Reading 10 posts from Sophos News **********\n",
+      "********** Persisted 10 posts from Sophos News **********\n",
+      "Processed feed https://news.sophos.com/en-us/feed/\n",
+      "********** Reading 10 posts from SentinelOne **********\n",
+      "********** Persisted 10 posts from SentinelOne **********\n",
+      "Processed feed https://www.sentinelone.com/feed/\n",
+      "********** Reading 15 posts from Unit 42 **********\n",
+      "********** Persisted 15 posts from Unit 42 **********\n",
+      "Processed feed https://unit42.paloaltonetworks.com/feed/\n",
+      "********** Reading 10 posts from Blog **********\n",
+      "********** Persisted 10 posts from Blog **********\n",
+      "Processed feed https://www.crowdstrike.com/en-us/blog/feed\n",
+      "********** Reading 10 posts from CISA Blog **********\n",
+      "********** Persisted 10 posts from CISA Blog **********\n",
+      "Processed feed https://www.cisa.gov/blog.xml\n",
+      "********** Reading 10 posts from CISA News **********\n",
+      "Error reading https://www.cisa.gov/news-events/news/cisa-update-treasury-breach, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/news/2024-year-review-highlights-cisas-achievements-reducing-risk-and-building-resilience-cybersecurity, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "********** Persisted 10 posts from CISA News **********\n",
+      "Processed feed https://www.cisa.gov/news.xml\n",
+      "********** Reading 30 posts from All CISA Advisories **********\n",
+      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/06/cisa-releases-three-industrial-control-systems-advisories, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-08, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-04, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/04/cisa-adds-four-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/03/cisa-adds-five-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "Error reading https://www.cisa.gov/news-events/alerts/2025/02/25/cisa-releases-two-industrial-control-systems-advisories, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "********** Persisted 30 posts from All CISA Advisories **********\n",
+      "Processed feed https://www.cisa.gov/cybersecurity-advisories/all.xml\n",
+      "********** Reading 15 posts from Cisco Talos Blog **********\n",
+      "********** Persisted 15 posts from Cisco Talos Blog **********\n",
+      "Processed feed https://blog.talosintelligence.com/rss/\n",
+      "********** Reading 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "********** Persisted 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "Processed feed https://isc.sans.edu/rssfeed_full.xml\n",
+      "********** Reading 10 posts from Microsoft Security Blog **********\n",
+      "********** Persisted 10 posts from Microsoft Security Blog **********\n",
+      "Processed feed https://www.microsoft.com/en-us/security/blog/feed/\n",
+      "********** Reading 20 posts from Threat Intelligence **********\n",
+      "********** Persisted 20 posts from Threat Intelligence **********\n",
+      "Processed feed https://feeds.feedburner.com/threatintelligence/pvexyqv7v0v\n",
+      "********** Reading 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "********** Persisted 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "Processed feed https://www.securitymagazine.com/rss/15\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    main()"
