--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "7e69a932-fe06-468f-be55-3b9a2b0b268f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "5cdbd990-8591-4acd-b7aa-848e86d6d2cd",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -182,10 +182,10 @@
     "        body = soup.find('body')\n",
     "        title = soup.find('title')\n",
     "\n",
-    "        return Report(resp.text, title, body.text, ReportType.HTML, source, publish_time, url=url)\n",
+    "        return Report(resp.text, title.text, body.get_text(separator=' ', strip=True), ReportType.HTML, source, publish_time, url=url)\n",
     "\n",
     "    def parse_iocs(self):\n",
-    "        self.domains = list(set(ie.extract_urls(self.body, no_scheme=True)))\n",
+    "        self.domains = list(set(ie.extract_urls(self.body)))\n",
     "        self.ipv4s = list(set(ie.extract_ipv4s(self.body)))\n",
     "        self.ipv6s = list(set(ie.extract_ipv6s(self.body)))\n",
     "        self.cves = list(self.cve_re.findall(self.body))\n",
@@ -195,7 +195,7 @@
     "        self.yara_rules = list(set(ie.extract_yara_rules(self.body)))\n",
     "\n",
     "        ref_ipv4s = [ie.refang_ipv4(ipv4) for ipv4 in self.ipv4s]\n",
-    "        ref_domains = [ie.refang_data(domain, no_scheme=True) for domain in self.domains]\n",
+    "        ref_domains = [ie.refang_data(domain) for domain in self.domains]\n",
     "\n",
     "        for i in range(len(self.ipv4s)):\n",
     "            self.body = self.body.replace(self.ipv4s[i], ref_ipv4s[i])\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -230,6 +230,12 @@
     "        os.makedirs(os.path.dirname(report_data_url), exist_ok=True)\n",
     "        with open(report_data_url, \"w\") as f:\n",
     "            f.write(r.contents)\n",
+    "\n",
+    "    parsed_report_path = f\"parseddata/{r.source}/{report_id}.txt\"\n",
+    "    if not os.path.exists(parsed_report_path):\n",
+    "        os.makedirs(os.path.dirname(parsed_report_path), exist_ok=True)\n",
+    "        with open(parsed_report_path, \"w\") as f:\n",
+    "            f.write(r.body)\n",
     "\n",
     "    data = {\n",
     "        \"id\": report_id,\n",
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "41a3b524-b3a6-4b2d-9bc6-dae222946aef",
    "metadata": {},
    "outputs": [],
@@ -294,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -303,6 +309,7 @@
     "    source = feed.feed.title\n",
     "    print(f\"********** Reading {len(feed.entries)} posts from {source} **********\")\n",
     "\n",
+    "    count = 0\n",
     "    for entry in feed.entries:\n",
     "        with conn:\n",
     "            row = conn.execute(\"SELECT * FROM report WHERE web_url = ?\", (entry.link,)).fetchone()\n",
@@ -329,13 +336,15 @@
     "        report_id = row[0] if row else str(uuid.uuid4())\n",
     "        persist_report(r, report_id, conn)\n",
     "        index_report(r, report_id, ixwriter)\n",
+    "\n",
+    "        count += 1\n",
     "        \n",
-    "    print(f\"********** Persisted {len(feed.entries)} posts from {source} **********\")"
+    "    print(f\"********** Persisted {count} / {len(feed.entries)} posts from {source} **********\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -385,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "6c9f81b9-1a0c-47dc-b4bb-282552f51a0a",
    "metadata": {},
    "outputs": [
@@ -394,57 +403,52 @@
      "output_type": "stream",
      "text": [
       "********** Reading 100 posts from WeLiveSecurity **********\n",
-      "********** Persisted 100 posts from WeLiveSecurity **********\n",
+      "********** Persisted 100 / 100 posts from WeLiveSecurity **********\n",
       "Processed feed https://www.welivesecurity.com/en/rss/feed/\n",
       "********** Reading 16 posts from abuse.ch | IT-Security Blog **********\n",
-      "********** Persisted 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "********** Persisted 16 / 16 posts from abuse.ch | IT-Security Blog **********\n",
       "Processed feed https://abuse.ch/rss\n",
       "********** Reading 15 posts from Check Point Research **********\n",
-      "********** Persisted 15 posts from Check Point Research **********\n",
+      "********** Persisted 15 / 15 posts from Check Point Research **********\n",
       "Processed feed https://research.checkpoint.com/feed/\n",
       "********** Reading 10 posts from Sophos News **********\n",
-      "********** Persisted 10 posts from Sophos News **********\n",
+      "********** Persisted 10 / 10 posts from Sophos News **********\n",
       "Processed feed https://news.sophos.com/en-us/feed/\n",
       "********** Reading 10 posts from SentinelOne **********\n",
-      "********** Persisted 10 posts from SentinelOne **********\n",
+      "********** Persisted 10 / 10 posts from SentinelOne **********\n",
       "Processed feed https://www.sentinelone.com/feed/\n",
       "********** Reading 15 posts from Unit 42 **********\n",
-      "********** Persisted 15 posts from Unit 42 **********\n",
+      "********** Persisted 15 / 15 posts from Unit 42 **********\n",
       "Processed feed https://unit42.paloaltonetworks.com/feed/\n",
       "********** Reading 10 posts from Blog **********\n",
-      "********** Persisted 10 posts from Blog **********\n",
+      "********** Persisted 10 / 10 posts from Blog **********\n",
       "Processed feed https://www.crowdstrike.com/en-us/blog/feed\n",
       "********** Reading 10 posts from CISA Blog **********\n",
-      "********** Persisted 10 posts from CISA Blog **********\n",
+      "Error reading https://www.cisa.gov/news-events/news/safecom-publishes-spring-2024-safecom-bi-annual-meeting-executive-summary, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "********** Persisted 9 / 10 posts from CISA Blog **********\n",
       "Processed feed https://www.cisa.gov/blog.xml\n",
       "********** Reading 10 posts from CISA News **********\n",
-      "Error reading https://www.cisa.gov/news-events/news/cisa-update-treasury-breach, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/news/2024-year-review-highlights-cisas-achievements-reducing-risk-and-building-resilience-cybersecurity, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "********** Persisted 10 posts from CISA News **********\n",
+      "********** Persisted 10 / 10 posts from CISA News **********\n",
       "Processed feed https://www.cisa.gov/news.xml\n",
       "********** Reading 30 posts from All CISA Advisories **********\n",
-      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/06/cisa-releases-three-industrial-control-systems-advisories, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-08, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
       "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-04, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/04/cisa-adds-four-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/alerts/2025/03/03/cisa-adds-five-known-exploited-vulnerabilities-catalog, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/alerts/2025/02/25/cisa-releases-two-industrial-control-systems-advisories, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "********** Persisted 30 posts from All CISA Advisories **********\n",
+      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-051-01, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
+      "********** Persisted 28 / 30 posts from All CISA Advisories **********\n",
       "Processed feed https://www.cisa.gov/cybersecurity-advisories/all.xml\n",
       "********** Reading 15 posts from Cisco Talos Blog **********\n",
-      "********** Persisted 15 posts from Cisco Talos Blog **********\n",
+      "********** Persisted 15 / 15 posts from Cisco Talos Blog **********\n",
       "Processed feed https://blog.talosintelligence.com/rss/\n",
       "********** Reading 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
-      "********** Persisted 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "********** Persisted 11 / 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
       "Processed feed https://isc.sans.edu/rssfeed_full.xml\n",
       "********** Reading 10 posts from Microsoft Security Blog **********\n",
-      "********** Persisted 10 posts from Microsoft Security Blog **********\n",
+      "********** Persisted 10 / 10 posts from Microsoft Security Blog **********\n",
       "Processed feed https://www.microsoft.com/en-us/security/blog/feed/\n",
       "********** Reading 20 posts from Threat Intelligence **********\n",
-      "********** Persisted 20 posts from Threat Intelligence **********\n",
+      "********** Persisted 20 / 20 posts from Threat Intelligence **********\n",
       "Processed feed https://feeds.feedburner.com/threatintelligence/pvexyqv7v0v\n",
       "********** Reading 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
-      "********** Persisted 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "********** Persisted 30 / 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
       "Processed feed https://www.securitymagazine.com/rss/15\n"
      ]
     }
