Implement /v1/reports/related API to retrieve related reports

--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -22,8 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def group_documents(documents):\n",
+    "def chunk_document(splitter, doc):\n",
+    "    documents = splitter.split_text(doc)\n",
+    "    \n",
     "    grouped_docs = defaultdict(list)\n",
+    "    \n",
     "    for doc in documents:\n",
     "        key = \" > \".join(doc.metadata.values())\n",
     "        grouped_docs[key].append(doc.page_content)\n",
@@ -32,12 +35,12 @@
     "    for key, values in grouped_docs.items():\n",
     "        agg_grouped_docs[key] = \"\\n\\n\".join(values)\n",
     "        \n",
-    "    return agg_grouped_docs"
+    "    return agg_grouped_docs.values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5629a1c2-3040-45e5-8f5e-0af28a7e306e",
    "metadata": {},
    "outputs": [],
@@ -58,13 +61,11 @@
     "\n",
     "            documents = []\n",
     "            with open(fullpath) as f:\n",
-    "                documents = splitter.split_text(f.read())\n",
-    "\n",
-    "            grouped_documents = group_documents(documents)\n",
+    "                documents = chunk_document(splitter, f.read())\n",
     "\n",
     "            ids = []\n",
     "            crdb_docs = []\n",
-    "            for i, value in enumerate(group_documents(documents).values()):\n",
+    "            for i, value in enumerate(documents):\n",
     "                ids.append(f\"{i}:{report_id}\")\n",
     "                crdb_docs.append(value)\n",
     "\n",
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c50757d3-94ba-4e5f-ab7b-8afe54a89ec0",
    "metadata": {},
    "outputs": [
@@ -92,33 +93,33 @@
      "output_type": "stream",
      "text": [
       "Indexing documents for SentinelOne\n",
-      "Finished indexing documents for SentinelOne. Total 112 documents\n",
+      "Finished indexing documents for SentinelOne. Total 1940 documents\n",
       "Indexing documents for Check Point Research\n",
-      "Finished indexing documents for Check Point Research. Total 238 documents\n",
+      "Finished indexing documents for Check Point Research. Total 1940 documents\n",
       "Indexing documents for Subscribe to Security Magazine's RSS Feed\n",
-      "Finished indexing documents for Subscribe to Security Magazine's RSS Feed. Total 672 documents\n",
+      "Finished indexing documents for Subscribe to Security Magazine's RSS Feed. Total 1940 documents\n",
       "Indexing documents for Microsoft Security Blog\n",
-      "Finished indexing documents for Microsoft Security Blog. Total 796 documents\n",
+      "Finished indexing documents for Microsoft Security Blog. Total 1940 documents\n",
       "Indexing documents for abuse.ch | IT-Security Blog\n",
-      "Finished indexing documents for abuse.ch | IT-Security Blog. Total 812 documents\n",
+      "Finished indexing documents for abuse.ch | IT-Security Blog. Total 1940 documents\n",
       "Indexing documents for All CISA Advisories\n",
-      "Finished indexing documents for All CISA Advisories. Total 958 documents\n",
+      "Finished indexing documents for All CISA Advisories. Total 1940 documents\n",
       "Indexing documents for Unit 42\n",
-      "Finished indexing documents for Unit 42. Total 1108 documents\n",
+      "Finished indexing documents for Unit 42. Total 1940 documents\n",
       "Indexing documents for Blog\n",
-      "Finished indexing documents for Blog. Total 1164 documents\n",
+      "Finished indexing documents for Blog. Total 1940 documents\n",
       "Indexing documents for WeLiveSecurity\n",
-      "Finished indexing documents for WeLiveSecurity. Total 1681 documents\n",
+      "Finished indexing documents for WeLiveSecurity. Total 1940 documents\n",
       "Indexing documents for Cisco Talos Blog\n",
-      "Finished indexing documents for Cisco Talos Blog. Total 1875 documents\n",
+      "Finished indexing documents for Cisco Talos Blog. Total 1940 documents\n",
       "Indexing documents for Threat Intelligence\n",
-      "Finished indexing documents for Threat Intelligence. Total 1899 documents\n",
+      "Finished indexing documents for Threat Intelligence. Total 1940 documents\n",
       "Indexing documents for CISA News\n",
-      "Finished indexing documents for CISA News. Total 1909 documents\n",
+      "Finished indexing documents for CISA News. Total 1940 documents\n",
       "Indexing documents for CISA Blog\n",
-      "Finished indexing documents for CISA Blog. Total 1918 documents\n",
+      "Finished indexing documents for CISA Blog. Total 1940 documents\n",
       "Indexing documents for Sophos News\n",
-      "Finished indexing documents for Sophos News. Total 1938 documents\n",
+      "Finished indexing documents for Sophos News. Total 1940 documents\n",
       "Indexing documents for SANS Internet Storm Center, InfoCON: green\n",
       "Finished indexing documents for SANS Internet Storm Center, InfoCON: green. Total 1949 documents\n",
       "Indexed 1949 documents\n"
